# Bula-AI

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Agents.md  Makefile  README.md  backend - Atalho.lnk  docker-compose.yml
.github/: dependabot.yml  (+1 more)
backend/: .coverage  Dockerfile  README.md  fix_mapper_resolution.patch  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0cea65267dcb_create_refresh_tokens.py  12523fd22101_create_users_table.py  8f493c537373_create_documents_table.py  98d1228bbac0_refactor_bulas_and_add_chat.py  a7c9d2e4f6b8_make_bula_file_url_nullable.py  aadeede96f2e_add_refresh_tokens_table.py  b4e6c8d9a0f1_add_role_to_users.py  e71ad9ec9679_add_full_name_to_users_table.py  ee100f7e5788_drop_legacy_documents_table.py  f3a1b2c4d5e6_create_stored_objects_table.py
backend/app/: main.py
backend/app/core/: base.py  config.py  database.py  exceptions.py  logging_config.py  middleware.py  request_logging.py
backend/app/core/db/: session.py
backend/app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/modules/bulas/: dependencies.py  helpers.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/chat/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/routes/: upload.py
backend/app/scripts/: __init__.py  create_admin.py
backend/app/services/: pdf.py
backend/scripts/: chat_playground.py  check_migrations.py  coverage_comment.py  smoke_test_crypto.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_bulas_upload.py  test_chat.py  test_mapper_resolution.py
backend/tests/unit/: test_logging_config.py  test_object_store_client.py  test_security.py  test_service.py
(+73 files in other folders)
